[package]
name = "openssl-rs"
version = "0.1.0"
edition = "2018"

vendored = ['ffi/vendored']

[dependencies]
bitflags = "1"
cfg-if = "1"
foreign-types = "0"
libc = "0"
once_cell = "1"

ffi = { package = "openssl-rs-sys", version = "0", path = "../openssl-rs-sys" }

[dev-dependencies]
tempdir = "0"
hex = "0"
